added texture switch for the tail as well

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -1,10 +1,41 @@
-@PART[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]
+@PART[ShuttleOrbiter*]:FOR[RealismOverhaul]
 {
 
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
-	@mass = 44.417
+	@mass = 45
+	
+	//case mass overrides the whole part mass
+	!MODULE[ModuleParachute]{}
+	MODULE
+	{
+		name = RealChuteModule
+		caseMass = 45.0	//must be the orbiter mass plus the tail
+		timer = 0
+		mustGoDown = False
+		deployOnGround = True
+		cutSpeed = 30
+		spareChutes = 5
+		
+		PARACHUTE
+		{
+			material = Nylon
+			capName = Parashute
+			parachuteName = CANOPY
+			preDeploymentAnimation = SEMI
+			deploymentAnimation = FULL
+			preDeployedDiameter = 3
+			deployedDiameter = 10
+			minIsPressure = False
+			minDeployment = 50
+			minPressure = 0.00999999978
+			deploymentAlt = 10
+			cutAlt = -1
+			preDeploymentSpeed = 2
+			deploymentSpeed = 6
+		}
+	}
 	
 	//from the shuttle crew operations manual, section 4.8 CG Limitations
 	//calibrated around station X1090 with all the parts and engines, empty tanks and cargo bay
@@ -20,7 +51,7 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	!MODULE[ModuleLiftingSurface]{}
-	%MODULE[FARWingAerodynamicModel]
+	%MODULE[FARSpaceShuttleAerodynamicModel]
 	{
 		%MAC = 15.47
 		%MidChordSweep = 45
@@ -322,7 +353,7 @@
 }
 
 
-@PART[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ShuttleOrbiter*]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
 	@MODULE[ModuleFuelTanks]
 	{
@@ -462,8 +493,13 @@
 }
 
 
+@PART[ShuttleOrbiterTailBasicCabin]:FOR[RealismOverhaul]
+{
+	
+}
+
 //Cockpit internal configuration
-@INTERNAL[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]
+@INTERNAL[ShuttleOrbiter*]:FOR[RealismOverhaul]
 {
 	%scaleAll = 1.5625, 1.5625, 1.5625
 	
@@ -476,7 +512,7 @@
 }
 
 
-@PART[ShuttleOrbiter|ShuttleOrbiterBasicCabin]
+@PART[ShuttleOrbiter*]
 {
 	!MODULE[ModuleB9PartSwitch]
 	MODULE
@@ -540,6 +576,17 @@
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
+			}
 		}
 		SUBTYPE
 		{
@@ -599,6 +646,17 @@
 				transform = Wing_RCZ2_003
 				
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
+			}
 		}
 		SUBTYPE
 		{
@@ -653,6 +711,17 @@
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
+			}
 		}
 		SUBTYPE
 		{
@@ -706,6 +775,17 @@
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
 			}
 		}
 		SUBTYPE
@@ -763,11 +843,23 @@
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
+			}
 		}
 		SUBTYPE
 		{
 			name = columbiaModern
 			title = Columbia Modern
+			transform = _01_Tail
 			
 			addedMass = 3.116
 			CoMOffset = 0.0, -3.3, 0.0
@@ -819,6 +911,17 @@
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
 			}
 		}
 		SUBTYPE
@@ -874,6 +977,17 @@
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
+			}
 		}
 		SUBTYPE
 		{
@@ -927,6 +1041,17 @@
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
 			}
 		}
 		SUBTYPE
@@ -983,6 +1108,17 @@
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
 			}
 		}
 		
@@ -1048,6 +1184,17 @@
 				transform = RIGHT_PLBD_EXT
 				transform = LEFT_PLBD_EXT
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
+			}
 		}
 		SUBTYPE
 		{
@@ -1089,6 +1236,17 @@
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
 			}
 		}
 		SUBTYPE
@@ -1136,6 +1294,17 @@
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Tail_NO_Chute
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Tail_NO_Chute
 			}
 		}
 	}
