reverted to tailless orbiter

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ShuttleOrbiter
+	name = ShuttleOrbiterBasicCabin
 	module = Part
 	author = SSU, UbioZurWeldingLtd
 
@@ -95,7 +95,7 @@ PART
 	}
 INTERNAL
 	{
-		name = css_cockpit
+		name = css_cockpitEmpty
 		offset=0, 0.235, -5.922
 	}
 	
