fixed parts and et door anim

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ShuttleOrbiter
+	name = ShuttleOrbiterBasicCabin
 	module = Part
 	author = SSU, UbioZurWeldingLtd
 
@@ -36,7 +36,7 @@ PART
 	cost = 5600
 	category = Pods
 	subcategory = 0
-	title = Shuttle Orbiter
+	title = Shuttle Orbiter (Empty Cockpit)
 	manufacturer = Boeing/Rockwell
 	description = Warranty void during re-entry.
 	mass = 16.132000445999999
@@ -95,7 +95,7 @@ PART
 	}
 INTERNAL
 	{
-		name = css_cockpit
+		name = css_cockpitEmpty
 		offset=0, 0.235, -5.922
 	}
 	
