--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -72,6 +72,7 @@
 		%pitchaxis = 100
 		%yawaxis = 0
 		%rollaxis = 50
+		%pitchaxisDueToAoA = 50
 		isFlap = True
 		isSpoiler = False
 		flapDeflectionLevel = 0
@@ -183,7 +184,8 @@
 		%maxdeflect = 20
 		%pitchaxis = 0
 		%yawaxis = 100
-		%rollaxis = 40
+		%rollaxis = 0
+		%pitchaxisDueToAoA = 50
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%massOverride = 0
@@ -222,10 +224,11 @@
 		%TaperRatio = 1
 		%MidChordSweep = 0
 		%nonSideAttach = 1
-		%maxdeflect = 0
+		%maxdeflect = 15
 		%pitchaxis = 0
 		%yawaxis = 0
 		%rollaxis = 0
+		%pitchaxisDueToAoA = 50
 		isFlap = True
 		isSpoiler = False
 		flapDeflectionLevel = 0
