fixed gear part scaling and attachment

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Gear.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Gear.cfg
@@ -2,7 +2,7 @@
 {
 	%RSSROConfig = True
 	
-	@rescaleFactor = 1.81
+	%rescaleFactor = 1.5625
 	%CoMOffset = 0, 1.5, 0		//Adjust CoM to match gear when retracted, not extended
 	@mass = 1.0
 	
@@ -42,7 +42,7 @@
 {
 	%RSSROConfig = True
 	
-	@rescaleFactor = 1.81
+	%rescaleFactor = 1.5625
 	%CoMOffset = 0, 1.5, 0		//Adjust CoM to match gear when retracted, not extended
 	@mass = 2.4
 	
