--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleNoseGear.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleNoseGear.cfg
@@ -4,7 +4,8 @@ PART
 	module = Part
 	author = SSU
 
-	rescaleFactor = 1
+	scale = 0.64
+	rescaleFactor = 1.0
 
 	TechRequired = landing
 	entryCost = 3800
