--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleMainGear.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleMainGear.cfg
@@ -2,9 +2,10 @@ PART
 {
 	name = ShuttleMainGear
 	module = Part
-	author = Benjee10
-	scale = 1.0
-	rescaleFactor = 1.02
+	author = SSU
+	
+	scale = 0.64
+	rescaleFactor = 1.0
 
 	TechRequired = landing
 	entryCost = 3800
