balanced col after altering the aero model, reentry now works beautifully

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -20,13 +20,15 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	!MODULE[ModuleLiftingSurface]{}
+	//b2 is the total orbiter wingspan
+	//MAC is calculated from the total planform area of 367.15 m2
 	%MODULE[FARSpaceShuttleAerodynamicModel]
 	{
-		%MAC = 15.47
+		%MAC = 15.43
 		%MidChordSweep = 45
 		%b_2 = 23.79
 		%TaperRatio = 0.185
-		%rootMidChordOffsetFromOrig = 9.175, -0.1, 0
+		%rootMidChordOffsetFromOrig = 9.175, 3.0, 0
 		%massOverride = 0
 	}
 	
