--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleRudderPanel.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleRudderPanel.cfg
@@ -8,6 +8,7 @@ PART
 	{
 		model = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleRudderPanel
         scale = 0.64, 0.64, 0.64
+		position = 0.08, -0.15, 0
 	}
 	scale = 0.64
 	rescaleFactor = 1.0
@@ -20,6 +21,7 @@ PART
 	title = Shuttle Rudder Panel
 	manufacturer = Boeing/Rockwell
 	description = Control surface for Shuttle's tail.
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1
 	attachRules = 1,1,1,1,0
 	mass = 0.005
 	dragModelType = none
