fixed panel model placement

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleRudderPanel.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleRudderPanel.cfg
@@ -8,7 +8,8 @@ PART
 	{
 		model = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleRudderPanel
         scale = 0.64, 0.64, 0.64
-		position = 0.08, -0.15, 0
+		position = 0, -0.15, -0.08
+		rotation = 0, 0, -1.5
 	}
 	scale = 0.64
 	rescaleFactor = 1.0
