modified tail control with functional split rudder

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -157,6 +157,8 @@
 	
 }
 
+
+
 @PART[SHUTTLE_Tail_Control|ShuttleTailControl]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
@@ -170,70 +172,11 @@
 	%skinSkinConductionMult = 0.1
 	%emissiveConstant = 0.95		//matte black
 	
-	@maximum_drag = 0
-	@minimum_drag = 0
-	@angularDrag = 0
-	
-	!MODULE[ModuleControlSurface]{}
-	%MODULE[FARControllableSurface] {
-		%b_2 = 5.9
-		%MAC = 1.45
-		%TaperRatio = 0.57
-		%MidChordSweep = -4.6
-		%nonSideAttach = 1
-		%maxdeflect = 20
-		%pitchaxis = 0
-		%yawaxis = 100
-		%rollaxis = 0
-		%pitchaxisDueToAoA = 50
-		%ctrlSurfFrac = 1
-		%transformName = 1
-		%massOverride = 0
-	}
-}
-
-@PART[ShuttleRudderPanel]:FOR[RealismOverhaul]
-{
-	%RSSROConfig = true
-	
-	%rescaleFactor = 1.5625
-	
-	@maxTemp = 773
-	%skinMaxTemp = 2000
-	%heatConductivity = 0.01		//all conductivity
-	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
-	%skinSkinConductionMult = 0.1
-	%emissiveConstant = 0.95		//matte black
-	
-	@maximum_drag = 0
-	@minimum_drag = 0
-	@angularDrag = 0
-	
-	!MODULE[ModuleControlSurface]{}
-	%MODULE[FARControllableSurface] {
-		%b_2 = 8
-		%MAC = 5
-		%TaperRatio = 0.57
-		%MidChordSweep = -4.6
-		%nonSideAttach = 1
-		%maxdeflect = 20
-		%pitchaxis = 0
-		%yawaxis = 100
-		%rollaxis = 0
-		%isSpoiler = True
-		%maxdeflectFlap = -44
-		%ctrlSurfFrac = 1
-		%transformName = panel
-		%massOverride = 0
-	}
-}
-
-@PART[SHUTTLE_Tail_Control|ShuttleTailControl]:AFTER[FerramAerospaceResearch]
-{
-	@MODULE[GeometryPartModule]
+	@MODULE[ModuleControlSurface*]
 	{
-		%rebuildOnAnimation = true
+		@dragCoeff = 4
 	}
+	
 }
 
 @PART[BODY_FLAP_SPACE_SHUTTLE|ShuttleBodyFlap]:FOR[RealismOverhaul]
