--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
@@ -38,32 +38,31 @@ MODEL
 
 MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = anim
+		name = ModuleControlSurface
 		useInternalDragModel = True
-		dragCoeff = 0.9
-		defaultActionGroup = Brakes
-		startEventGUIName = Open
-		endEventGUIName = Close
-		actionGUIName = Toggle Airbrake
-		deployedDrag = 77
-		ignorePitch = True
-		ignoreYaw = True
+		dragCoeff = 0.5
+		deflectionLiftCoeff = 0.6		// 4.53m^2 /2
+		ctrlSurfaceRange = 35
+		ctrlSurfaceArea = 0.4
+		actuatorSpeed = 40
+		transformName = rudderPanelL
+		partDeployInvert = True
 		ignoreRoll = True
+		ignorePitch = True
 	}
 
-MODULE
+	MODULE
 	{
 		name = ModuleControlSurface
 		useInternalDragModel = True
 		dragCoeff = 0.5
-		deflectionLiftCoeff = 2.0
-		ctrlSurfaceRange = 20
-		ctrlSurfaceArea = 1
-		actuatorSpeed = 35
-		transformName = 1
-		ignorePitch = True
+		deflectionLiftCoeff = 0.6		// 4.53m^2 /2
+		ctrlSurfaceRange = 35
+		ctrlSurfaceArea = 0.4
+		actuatorSpeed = 40
+		transformName = rudderPanelR
 		ignoreRoll = True
+		ignorePitch = True
 	}
 
 }
