--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
@@ -23,7 +23,7 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 2.79
-	%fuelCrossFeed = true
+	%fuelCrossFeed = false
 	
 	!RESOURCE[MonoPropellant]{}
 	
