adjusted default control settings

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
@@ -42,24 +42,28 @@ MODULE
 		useInternalDragModel = True
 		dragCoeff = 0.5
 		deflectionLiftCoeff = 0.6		// 4.53m^2 /2
-		ctrlSurfaceRange = 35
+		ctrlSurfaceRange = 55
+		authorityLimiter = 36
 		ctrlSurfaceArea = 0.4
 		actuatorSpeed = 40
 		transformName = rudderPanelL
 		partDeployInvert = True
+		deployAngle= 55
 		ignoreRoll = True
 		ignorePitch = True
 	}
 
-	MODULE
+MODULE
 	{
 		name = ModuleControlSurface
 		useInternalDragModel = True
 		dragCoeff = 0.5
 		deflectionLiftCoeff = 0.6		// 4.53m^2 /2
-		ctrlSurfaceRange = 35
+		ctrlSurfaceRange = 55
+		authorityLimiter = 36
 		ctrlSurfaceArea = 0.4
 		actuatorSpeed = 40
+		deployAngle= 55
 		transformName = rudderPanelR
 		ignoreRoll = True
 		ignorePitch = True
