adjusted cl position and lift

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
@@ -41,7 +41,7 @@ MODULE
 		name = ModuleControlSurface
 		useInternalDragModel = True
 		dragCoeff = 5
-		deflectionLiftCoeff = 0.8		// 4.53m^2 /2
+		deflectionLiftCoeff = 1.2
 		ctrlSurfaceRange = 55
 		authorityLimiter = 36
 		ctrlSurfaceArea = 0.4
@@ -58,7 +58,7 @@ MODULE
 		name = ModuleControlSurface
 		useInternalDragModel = True
 		dragCoeff = 5
-		deflectionLiftCoeff = 0.8		// 4.53m^2 /2
+		deflectionLiftCoeff = 1.2
 		ctrlSurfaceRange = 55
 		authorityLimiter = 36
 		ctrlSurfaceArea = 0.4
