restored old rudder config

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -158,7 +158,6 @@
 }
 
 
-
 @PART[SHUTTLE_Tail_Control|ShuttleTailControl]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
@@ -172,9 +171,21 @@
 	%skinSkinConductionMult = 0.1
 	%emissiveConstant = 0.95		//matte black
 	
-	@MODULE[ModuleControlSurface*]
-	{
-		@dragCoeff = 4
+	!MODULE[ModuleControlSurface]{}
+	%MODULE[FARControllableSurface] {
+		%b_2 = 5.9
+		%MAC = 1.45
+		%TaperRatio = 0.57
+		%MidChordSweep = -4.6
+		%nonSideAttach = 1
+		%maxdeflect = 20
+		%pitchaxis = 0
+		%yawaxis = 100
+		%rollaxis = 0
+		%pitchaxisDueToAoA = 50
+		%ctrlSurfFrac = 1
+		%transformName = 1
+		%massOverride = 0
 	}
 	
 }
