new eng mount and wings for enterprise orbital

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -627,7 +627,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -681,7 +681,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -737,7 +737,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
@@ -1056,6 +1056,62 @@
 				transform = LEFT_PLBD_EXT
 			}
 		}
+		
+		SUBTYPE
+		{
+			name = enterprise orbital
+			title = Enterprise Orbital
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE_ORBITAL
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_CHALLENGER
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISEORBITAL
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISEORBITAL
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		
 		SUBTYPE
 		{
 			name = empty
@@ -1111,7 +1167,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
 				transform = ULTRA_ENGINE
 			}
 			TEXTURE
