--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -96,6 +96,18 @@
 		}
 		SUBTYPE
 		{
+			name = enterprise_orbital
+			title = Enterprise Orbital
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE_ORBITAL
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+		}
+		SUBTYPE
+		{
 			name = empty
 			title = Blank
 			
@@ -236,6 +248,17 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+		}
+		SUBTYPE
+		{
+			name = old2
+			title = Old Alternate
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD2
 				transform = ULTRA_ENGINE
 			}
 		}
@@ -625,6 +648,27 @@
 		}
 		SUBTYPE
 		{
+			name = enterprise orb
+			title = Enterprise Orbital
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISEORBITAL
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+		}
+		SUBTYPE
+		{
 			name = empty
 			title = Blank B
 			
@@ -874,6 +918,27 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = enterprise2
+			title = Enterprise Orbital
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISEORBITAL
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
