--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -10,7 +10,7 @@
 	//calibrated around station X1090 with all the parts and engines, empty tanks and cargo bay
 	CoMOffset = 0.0, -3.0, 0.0
 	
-	%fuelCrossFeed = false
+	%fuelCrossFeed = true
 	
 	@maxTemp = 773
 	%skinMaxTemp = 2100
