life supprot changes

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
@@ -1,47 +1,7 @@
-@PART[SHUTTLE_Fuselase_Radiator|ShuttleCargo]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld|ShuttleCabinEmpty]:FOR[RealismOverhaul]
 {
-	!MODULE[TacGenericConverter],*{}
 
-    //  LOX to GOX converter. Converts the liquid oxygen into gas oxygen for
-    //  the life support system.
-
-    MODULE
-    {
-        name = TacGenericConverter
-        converterName = LOX to GOX Converter
-        tag = Life Support
-        StartActionName = Start LOX to GOX Converter
-        StopActionName = Stop LOX to GOX Converter
-        conversionRate = 6.0
-        GeneratesHeat = False
-        UseSpecialistBonus = False
-
-        INPUT_RESOURCE
-        {
-            ResourceName = LqdOxygen
-            Ratio = 0.0000154599
-            FlowMode = STAGE_PRIORITY_FLOW
-        }
-
-        INPUT_RESOURCE
-        {
-            ResourceName = ElectricCharge
-            Ratio = 0.05
-        }
-
-        OUTPUT_RESOURCE
-        {
-            ResourceName = Oxygen
-            Ratio = 0.0125104279
-            DumpExcess = False
-            FlowMode = STAGE_PRIORITY_FLOW
-        }
-    }
-}
-
-@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld|ShuttleCabinEmpty]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
-{
-	@MODULE[ModuleFuelTanks]
+@MODULE[ModuleFuelTanks]
 	{
 		@volume += 1324.2
 		
@@ -98,6 +58,53 @@
             maxAmount = 5000
         }
 	}
+
+}
+
+
+@PART[SHUTTLE_Fuselase_Radiator|ShuttleCargo]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+{
+	!MODULE[TacGenericConverter],*{}
+
+    //  LOX to GOX converter. Converts the liquid oxygen into gas oxygen for
+    //  the life support system.
+
+    MODULE
+    {
+        name = TacGenericConverter
+        converterName = LOX to GOX Converter
+        tag = Life Support
+        StartActionName = Start LOX to GOX Converter
+        StopActionName = Stop LOX to GOX Converter
+        conversionRate = 6.0
+        GeneratesHeat = False
+        UseSpecialistBonus = False
+
+        INPUT_RESOURCE
+        {
+            ResourceName = LqdOxygen
+            Ratio = 0.0000154599
+            FlowMode = STAGE_PRIORITY_FLOW
+        }
+
+        INPUT_RESOURCE
+        {
+            ResourceName = ElectricCharge
+            Ratio = 0.05
+        }
+
+        OUTPUT_RESOURCE
+        {
+            ResourceName = Oxygen
+            Ratio = 0.0125104279
+            DumpExcess = False
+            FlowMode = STAGE_PRIORITY_FLOW
+        }
+    }
+}
+
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld|ShuttleCabinEmpty]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+{
 	
 	!MODULE[TacGenericConverter],*{}
 
