--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -365,6 +365,19 @@
 		}
 		SUBTYPE
 		{
+			name = Type1
+			title = Thermal Blanket Old
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_ATLANTIS_OLD
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+		}
+		SUBTYPE
+		{
 			name = Type2
 			title = Thermal Tiles
 			
