--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-ssme.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-ssme.cfg
@@ -4717,8 +4717,8 @@ EFFECTTEMPLATE
 			LIGHT
 			{
 				transform = Light
-				intensity = 0
-				range = 22.0328693
+				intensity = 1
+				range = 75
 				lightType = Point
 				color = 0.784313738,0.870588243,0.945098042,1
 				angle = 0
